--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,18 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-	<body>
+<body>
 
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<%= render 'shared/nav' %>
-					<%= yield %>
-				</div>
-			</div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<%= render 'shared/nav' %>
+			<%= yield %>
 		</div>
+	</div>
+</div>
 
-		<%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false, image: :notice) %>
+<%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false) %>
 
-	</body>
+</body>
 </html>
