--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts</h1>
 
-<table class="table table-hover table-striped">
+<table class="table table-striped table-hover">
 	<thead>
 		<tr>
 			<th>
@@ -17,7 +17,6 @@
 			</th>
 			<th></th>
 			<th></th>
-
 		</tr>
 	</thead>
 	<tbody>
