--- a/app/assets/stylesheets/admin_homepage.css
+++ b/app/assets/stylesheets/admin_homepage.css
@@ -11,13 +11,9 @@
 .homepage-block {
   background-color: #1D3C91;
   color: white;
-  margin: 12px 42px 12px 42px;
+  margin: 15px;
   padding: 15px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-}
-
-.pending-details {
-  font-weight: 900;
 }
